Fix iOS auto-zoom on auth page inputs by setting font-size 16px on mobile

--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -242,3 +242,9 @@
   margin: 0;
   line-height: 1.5;
 }
+
+@media (max-width: 768px) {
+  .input {
+    font-size: 16px;
+  }
+}
